# alternate_world_classifier

./: .gitignore  pyproject.toml
lib/classifier/src/classifier/: __init__.py
lib/classifier/src/classifier/artifacts/: __init__.py  builder.py  generator.py  scaffold.py  schemas.py  sync.py  utils.py  validator.py
lib/classifier/src/classifier/pipeline/: __init__.py  orchestrator.py
lib/classifier/src/classifier/prompts/: __init__.py  base.py  exporter.py  stage1.py  stage2.py  stage3.py
lib/classifier/src/classifier/taxonomy/: __init__.py  condenser.py  example_generator.py  model_builder.py  prompt_builder.py  rule_generator.py  schemas.py  utils.py
svc/classification/: pyproject.toml
svc/classification/classification/scripts/: test_artifacts.py  test_full_pipeline.py  test_full_pipeline_yaml.py  test_stage1_pipeline.py  test_stage2_pipeline.py  verify_classifier_library.py
svc/classification/classification/test_prompt_build/: 1_test_condensation_full.py  2_generate_examples_category_specific.py  3_generate_examples_complex.py  4_combine_examples.py  5_assemble_stage1_prompt.py  6_test_assembled_prompt.py  7_test_stage1_classification.py  stage1_prompt_generated.py
svc/classification/classification/test_prompt_build/old/: prompt_building_stage_1_test.py  test_condensation_single_category.py
svc/classification/classification/tests/: test_model_builder.py
svc/preprocessing/: pyproject.toml
