[project]
name = "classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "classifier",
    "llm-parallelization>=0.1.0",
    "utils",
]

[tool.uv.sources]
utils = { workspace = true }
classifier = { workspace = true }
